.devops/istio-safbi.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: safbi-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: safbi-vs
spec:
  hosts:
  - '*'
  gateways:
  - safbi-gw
  http:
  - match:
    - uri:
        prefix: /safbi
    route:
    - destination:
        host: safbi
        port:
          number: 80
